--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/node": "^8.10.29",
       "ts-node": "3.3.0",
-      "@types/node": "^8.0.29",
       "typescript": "2.5.2"
    },
    "dependencies": {
@@ -12,7 +12,7 @@
       "mysql": "^2.16.0",
       "reflect-metadata": "^0.1.12",
       "sqlite3": "^4.0.2",
-      "typeorm": "0.2.7",
+      "typeorm": "^0.2.7",
       "xml2json": "^0.11.2"
    },
    "scripts": {
